syntax = "proto3";

package go.micro.service.FavoriteService;
option go_package = "proto/FavoriteService";

service FavoriteService {
	rpc FavoriteAction(douyin_favorite_action_request) returns (douyin_favorite_action_response){}
  rpc FavoriteList(douyin_favorite_list_request) returns (douyin_favorite_list_response){}
}

message douyin_favorite_action_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
  int64 video_id = 3; // 视频id
  int32 action_type = 4; // 1-点赞，2-取消点赞
}

message douyin_favorite_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}

message douyin_favorite_list_request {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token
}

message douyin_favorite_list_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 用户点赞视频列表
}

message Video {
  int64 id = 1; // 视频唯一标识
  User author = 2; // 视频作者信息
  string play_url = 3; // 视频播放地址
  string cover_url = 4; // 视频封面地址
  int64 favorite_count = 5; // 视频的点赞总数
  int64 comment_count = 6; // 视频的评论总数
  bool is_favorite = 7; // true-已点赞，false-未点赞
}

message User {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
}